--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>从零开始搭建webpack</title>
-    <script></script>
 </head>
 <body>
-    
+    <div id = "app"></div>
+    <script src = "../dist/bundle.js"></script>
 </body>
 </html>
