--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>从零开始搭建webpack</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <img src="../assets/images/1.jpg" alt="">
+    </div>
 </body>
 </html>
