--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="app">
-        <img src="../assets/images/1.jpg" alt="">
+        <!-- <img src="../assets/images/1.jpg" alt=""> -->
+        <div class="myless">hello</div>
+        <div class="myscss">world</div>
     </div>
 </body>
 </html>
